test tạo workspace
